# obsidian-lsp

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/tests/: debug-failing-links.md  headings.md  hover-source.md  hover-target.md  paragraphs.md  pipe-links.md  tables.md  tags.md  wikilinks.md
src/: ast.rs  comprehensive_test.rs  index.rs  main.rs  minimal_test.rs
