[package]
name = "obsidian-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
lsp-types = "0.97.0"
regex = "1.11.1"
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-lsp-server = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.13.0"
