[package]
name = "obsidian-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol (LSP) implementation for Obsidian markdown files"
license = "MIT"
repository = "https://github.com/vincent-uden/obsidian-lsp"
readme = "README.md"
keywords = ["lsp", "obsidian", "markdown", "language-server", "neovim"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Vincent Udén <vincentuden@gmail.com>"]

[dependencies]
dashmap = "6.1.0"
lsp-types = "0.97.0"
regex = "1.11.1"
tokio = { version = "1.47.1", features = ["full"] }
tower-lsp-server = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.13.0"
